lessons/Ingress/deploy-svc-app-latest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber-app-latest
  template:
    metadata:
      labels:
        app: kuber-app-latest
    spec:
      containers:
      - name: app-latest
        image: bokovets/kuber
        resources:
          # limits:
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-latest
spec:
  selector:
    app: kuber-app-latest
  ports:
  - port: 80
    targetPort: http
