lessons/Ingress/deploy-svc-app-v0.1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber-app-v01
  template:
    metadata:
      labels:
        app: kuber-app-v01
    spec:
      containers:
      - name: app-v01
        image: bokovets/kuber:0.1
        resources:
          # limits:
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v01
spec:
  selector:
    app: kuber-app-v01
  ports:
  - port: 80
    targetPort: http
