lessons/Ingress/deploy-svc-app-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber-app-v1
  template:
    metadata:
      labels:
        app: kuber-app-v1
    spec:
      containers:
      - name: app-v1
        image: bokovets/kuber:v1.0
        resources:
          # limits:
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v1
spec:
  selector:
    app: kuber-app-v1
  ports:
  - port: 80
    targetPort: http
