lessons/Ingress/deploy-svc-app-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber-app-v2
  template:
    metadata:
      labels:
        app: kuber-app-v2
    spec:
      containers:
      - name: app-v2
        image: bokovets/kuber:v2.0
        resources:
          # limits:
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v2
spec:
  type: NodePort
  selector:
    app: kuber-app-v2
  ports:
  - port: 80
   # nodePort: 30000
    targetPort: http
