lessons/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-service-v01
            port: 
              number: 80
      - pathType: Prefix
        path: "/auth/token-refresh"
        backend:
          service:
            name: service-token
            port: 
              number: 80


# fetch(kubet-service-v2.default/auth/token-refresh)
